# docs

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
assets/js/: home.js
assets/json/: home-particles.json
builds/: index.html
docs/: index.md  installation.md
docs/builds/: index.md
docs/language/: index.md  primitives.md  reference.md  sockets_plugs.md  values_fixed.md
includes/examples/: build_docs.sh  cddlc.json
includes/examples/cddl/: fixed.cddl  plug_socket.cddl  primitives.cddl
includes/examples/extra/: cddlc.json  cddlc_out.txt
installation/: index.html
language/: index.html
language/primitives/: index.html
language/reference/: index.html
language/sockets_plugs/: index.html
language/values_fixed/: index.html
material/overrides/: home.html  main.html
search/: search_index.json
stylesheets/: styles.css
