[tool.poetry]
name = "cddlc-docs"
version = "0.1.0"
description = "Documentation for cddlc compiler"
authors = ["Hannes Kimara <hanneskimara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
